# alacritty-gobject

./: Cargo.toml  README.md
examples/: basic.rs  window_test.rs
src/: config.rs  glium_widgets.rs  lib.rs  window.rs
