[package]
name = "alacritty-gobject"
version = "0.1.0"
authors = ["DefunctLizard <grantshandy@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
gtk = { git = "https://github.com/gtk-rs/gtk4-rs", package = "gtk4" }
alacritty_terminal = { git = "https://github.com/alacritty/alacritty", package = "alacritty_terminal" }
glutin = { git = "https://github.com/rust-windowing/glutin", package = "glutin" }
takeable-option = "0.5.0"

[build-dependencies]
gl_generator = "0.14"